--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,19 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #ffffff;
     width: 870px;
     padding: 33px 30px 45px 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 
 /* Top PLayers */
@@ -45,4 +49,83 @@ hr{
 .player-name{
     margin-left: 16px;
     font-size: 18px;
+}
+
+
+/*--------------------------- 
+Top Blog Styles 
+-----------------------------*/
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+
+.blog{
+    display: flex;
+}
+
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+
+.blog .blog-info{
+    margin-left: 16px;
+}
+.blog .blog-title{
+    font-size: 20px;
+}
+.blog .blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+}
+.blog .blog-author a{
+    color: #562EFF;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+/*--------------------------- 
+Courses Styles 
+-----------------------------*/
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+}
+.course{
+    width: 253px;
+    padding: 13px 11px 17px 13px;
+}
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.course-title{
+    font-size: 20px;
+}
+.course-author{
+    color: #ED6B4F;
+    font-size: 15px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+.course-duration{
+    color: #FF4A60;
+    background: #FFE4E8;
+    border-radius: 14.6913px;
+    padding: 0 5px;
 }
