--- a/styles/style.css
+++ b/styles/style.css
@@ -129,3 +129,59 @@ Courses Styles
     border-radius: 14.6913px;
     padding: 0 5px;
 }
+
+
+/*--------------------------- 
+Media Queries 
+-----------------------------*/
+
+/*Mobile Devices*/
+@media only screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player{
+        flex-direction: column;
+    }
+    .blog{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .blog .blog-info {
+        margin-left: 0;
+        text-align: center;     
+    }
+    .blog .blog-title {
+        margin-top: 5px;
+    }
+    .course{
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        margin-bottom: 50px;
+    }
+    .course-title{
+        margin-top: 5px;
+        margin-bottom: 8px;
+    }
+    .course-author{
+        margin-top: 5px;
+    }
+}
+
+
+/*Tablet Devices*/
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+    }
+
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+}
